Fix vertical misalignment in .fixed-left panel
This happened because a <select> field has a border while a <p> tag
doesn’t. Adding a +1px to the top solves it and now it’s pixel perfect!

--- a/app/scss/_style.scss
+++ b/app/scss/_style.scss
@@ -1434,6 +1434,7 @@ dim-compare {
     border-left: none;
     position: fixed;
     left: 1em;
+    margin-top: 1px;
     min-width: 100px;
   }
 }
